<resources>
    <string name="app_name">ClassApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="select_all">Select All</string>
    <string name="add">Add</string>
    <string name="sign_in">Sign In</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="all_users">All Users</string>
    <string name="row">Row</string>
    <string name="home">Home</string>
    <string name="upload_image">Upload Image</string>
    <string name="title">Title</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="todo">TODO</string>
</resources>
